Changes since last night.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IT Services in Rochester Hills, Michigan</title>
+    <title>okaygo.io - Web development from the future</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <div class="brand-wrapper"><a class="navbar-brand page-scroll" href="#page-top"><div class="logo"><div class="overlay"></div></div><span class="logo-text"><span class="color-pc">PC</span> <span class="color-shards">Shards</span></span></a></div>
+                <div class="brand-wrapper"><a class="navbar-brand page-scroll" href="#page-top"><div class="logo"><div class="overlay"></div></div><span class="logo-text">okaygo</span></a></div>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,24 +53,20 @@
                     <a href="#page-top"></a>
                   </li>
                   <li class="dropdown">
-                    <a class="dropdown-toggle"  href="#servicearea">Professional Services <!-- data-toggle="dropdown" -->
-                    <!-- <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="business.html">Business</a></li>
-                      <li><a href="home.html">Home</a></li>
-                    </ul> --></a>
+                    <a class="dropdown-toggle"  href="#servicearea">(E)Business &amp; Technology Development</a>
                   </li>
+
                     <li>
-                        <a class="page-scroll" href="#portfolio">IT Services and Hosting</a>
+                        <a class="page-scroll" href="#contact">Application &amp; Web Development</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
+                        <a class="page-scroll" href="#portfolio">Social Media Marketing &amp; Advertising</a>
+                    </li> 
                     <li>
-                        <a class="page-scroll" href="#contact">Request a Quote</a>
-                    </li>
+                        <a class="" href="http://okaygo.sexy">Arts &amp; Entertainment Planning</a>
+                    </li>                   
                     <li>
-                        <a class="page-scroll" href="#login">Login</a>
+                        <a class="page-scroll" href="#team">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -83,8 +79,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Information Technology</div>
-                <div class="intro-heading">Designed from the future</div>
+                <div class="intro-lead-in">Design and Develop</div>
+                <div class="intro-heading">The experience your company deserves</div>
                 <a href="#quote" class="page-scroll btn btn-xl">Request a Quote</a>
             </div>
         </div>
@@ -95,8 +91,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Professional IT Services in Rochester Hills, MI</h2>
-                    <h3 class="section-subheading text-muted">Catered to your business, or home user needs. On-site or remote appointments available to our clients.</h3>
+                    <h2 class="section-heading">Technologoy orientated services and development</h2>
+                    <h3 class="section-subheading text-muted">Designed to enhance and grow your ideas and your business.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -105,24 +101,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Virus removal and repair</h4>
-                    <p class="text-muted">We have a dedicated team of technicians who are ready to work on-site or remote in order to address any kind of software or hardware concerns that you may have.</p>
+                    <h4 class="service-heading">(e)Business &amp; Technology Development</h4>
+                    <p class="text-muted">Capture your current business, plan, and execute to take your revenues to the next levels. We can help you plan and build the correct technology bridges tailored for your existing technological scenarios. Are you ready to create the perfect physical and digital presence for your business? Is there a floor process that doesn't seem like it is working anymore, are you looking for technology or development to help solve the day to day?</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-film fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Maintenance and recovery</h4>
-                    <p class="text-muted">Let's face it computers are machines and often need to have a routine service in order to ensure that everything is running propper. This is very much like a standard automobile check. We offer the best services in our craft to address this issues in a reasonable fashion.</p>
+                    <h4 class="service-heading">Application &amp; Web Development</h4>
+                    <p class="text-muted">Are you ready to begin planning, architechting, designing, and developing your websites and applications? We have hands on experiencing building professional business driven applications in mobile, web, and even in some specialized system workflows such as CRMs and EDI. Web site design and development will come with real content based on the subjects that we talk about.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Cloud services and hosting</h4>
-                    <p class="text-muted">We offer a variety of service packages and hosting opportunities for your business needs. Let us help you take ownership of your existing and future infrastructure services.</p>
+                    <h4 class="service-heading">Social Media Marketing &amp; Advertising</h4>
+                    <p class="text-muted">Does your company need to gain a sense of control with your social media presence? Are you ready to optimize your targeted ad spending and capture the best metrics in order to improve the conversion rates and directly improve your ROI? There is more to advertising today then ever before and your market is as expensive as you make it to be. Discover the secrets to finding the people who will continue to shop with you!</p>
                 </div>
 
             </div>
